Updated docstrings and LP documentation for the SpaceTimeCube and LazySpaceTimeCube classes

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -197,6 +197,11 @@ def divide_evenly(dividend, divisor):
 
 
 def maybe_repeat_array(array, axis_repetitions):
+    """
+    Return a new array that is created by repeating the elements from the input
+    array repetitions times along the specified array axis. Avoid allocating
+    new memory if repetitions == 1 or if the repeated array axis has length 1.
+    """
     (axis, repetitions) = axis_repetitions
     if repetitions == 1:
         return array
@@ -219,10 +224,10 @@ Datasets of Varying Dimensionality]] and [[Support for Input Datasets of
 Varying Resolution]], this input data can be provided in a variety of
 dimensions and resolutions, subject to some simple constraints.
 
-The =SpaceTimeCube= itself will be created with a set of
+The =SpaceTimeCube= object will be created with a tuple of
 user-specified spatio-temporal resolutions, called the /cube shape/,
-which may be equal to or greater than those of the underlying data.
-For memory efficiency, input values are stored within the
+which must be equal to or exact multiples of those of the underlying
+data. For memory efficiency, input values are stored within the
 =SpaceTimeCube= object at their native resolution but can be accessed
 at any spatio-temporal point or region within the =SpaceTimeCube='s
 extent using coordinates from the /cube shape/ resolution.
@@ -240,12 +245,17 @@ constant input dimensions.
 #+begin_src python
 class SpaceTimeCube:
     """
-    TODO: Add docstring.
+    Create an object that represents a 3D array with dimensions (T,Y,X) given by cube_shape.
+    Internally, data is stored as a 3D Numpy array at the resolution of the provided base data.
+    Whenever a point value or contiguous space-time region of values is requested, translate
+    the given cube_shape coordinates into base coordinates, look up the values from the base data,
+    expand them (if necessary) back into the cube_shape resolution, and return the resulting scalar
+    value or array to the caller.
     """
     def __init__(self, cube_shape, base):
         """
-        NOTE: (t,y,x) = (0,0,0) is the upper-left corner of the cube in the first timestep.
-        NOTE: cube_shape >= base
+        NOTE: The resolutions in cube_shape must be exact multiples of any existing dimensions
+              in the base data.
         """
         # Ensure that cube_shape contains 3 values or throw an error
         (cube_bands, cube_rows, cube_cols) = cube_shape
@@ -301,7 +311,10 @@ class SpaceTimeCube:
 
     def get(self, t, y, x):
         """
-        Returns a scalar value.
+        Return the scalar value at index (t,y,x) by translating these cube coordinates
+        to base coordinates and looking up the value within the base data.
+
+        NOTE: (t,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
         """
         # Select value by spatio-temporal coordinate
         return self.data[t // self.t_repetitions,
@@ -313,7 +326,11 @@ class SpaceTimeCube:
     # NOTE: None and -1 cannot be passed in
     def getTimeSeries(self, t_range, y, x):
         """
-        Returns a 1D array.
+        Return the 1D array given by the slice (t_range,y,x) by translating these cube
+        coordinates to base coordinates, looking up the array slice within the base data,
+        and expanding it back to the cube_shape resolution.
+
+        NOTE: (t,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
         """
         # Destructure the argument range
         (t_start, t_stop) = t_range
@@ -340,7 +357,11 @@ class SpaceTimeCube:
     # NOTE: None and -1 cannot be passed in
     def getSpatialPlane(self, t, y_range, x_range):
         """
-        Returns a 2D array.
+        Return the 2D array given by the slice (t,y_range,x_range) by translating these
+        cube coordinates to base coordinates, looking up the array slice within the base
+        data, and expanding it back to the cube_shape resolution.
+
+        NOTE: (t,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
         """
         # Destructure the argument ranges
         (y_start, y_stop) = y_range
@@ -376,7 +397,11 @@ class SpaceTimeCube:
     # NOTE: None and -1 cannot be passed in
     def getSubcube(self, t_range, y_range, x_range):
         """
-        Returns a 3D array.
+        Return the 3D array given by the slice (t_range,y_range,x_range) by translating
+        these cube coordinates to base coordinates, looking up the array slice within the
+        base data, and expanding it back to the cube_shape resolution.
+
+        NOTE: (t,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
         """
         # Destructure the argument ranges
         (t_start, t_stop) = t_range
@@ -416,6 +441,11 @@ class SpaceTimeCube:
 
 
     def __getFullyRealizedCube(self):
+        """
+        Return the 3D array created by expanding the base data to the cube_shape resolution.
+        Wherever possible, Numpy broadcasting is used to avoid memory allocation along
+        constant array dimensions.
+        """
         match np.ndim(self.base):
             # 0D: Constant Input
             case 0:
@@ -451,7 +481,10 @@ class SpaceTimeCube:
 
     def getFullyRealizedCube(self, cache=False):
         """
-        Returns a 3D array.
+        Return the 3D array created by expanding the base data to the cube_shape resolution.
+        Wherever possible, Numpy broadcasting is used to avoid memory allocation along
+        constant array dimensions. When cache == True, this expanded 3D array is cached
+        within the SpaceTimeCube object for future immediate retrieval.
         """
         if hasattr(self, "cube"):
             return self.cube
@@ -472,53 +505,34 @@ class SpaceTimeCube:
 
 *** LazySpaceTimeCube Class
 
-# TODO: Update this text
+When a dataset is too large to fit easily into memory, it can be
+partitioned into a collection of subcubes, which will be lazily loaded
+on demand into a 3D cache grid of =SpaceTimeCube= objects provided by
+the =LazySpaceTimeCube= class.
 
-In order to avoid the need to fully load all of the 3D space-time
-cube's environmental datasets into memory at the beginning of a fire
-behavior simulation, Pyretechnics implements a lazy-loading mechanism
-that works as follows:
+The =LazySpaceTimeCube= object will be created with a tuple of
+user-specified spatio-temporal resolutions, called the /cube shape/,
+which must be equal to or exact multiples of the /subcube shape/.
 
-1. The 3D space-time cube is assigned a *simulation shape* $(T_s, Y_s,
-   X_s)$, which describes the number of timesteps, rows, and columns
-   it contains. This must be an exact multiple (in every dimension) of
-   the *layer shapes* described below.
+The various accessor functions provided by this class receive 3D
+space-time coordinates at the /cube shape/ resolution and will
+correctly map them into the corresponding cache and subcube indexes.
+Any intersected subcubes that are not already present in the cache
+grid will be loaded on demand by calling a user-supplied
+=load_subcube= function and stored in the cache grid for faster
+retrieval later. If a bounded region of space-time that spans multiple
+subcubes is requested via an accessor function, each of the
+intersected subcubes will be loaded and cached, their relevant array
+slices will be extracted, and these slices will be merged into a new
+array at the /cube shape/ resolution.
 
-2. Each input dataset is assigned a *layer shape* $(T_l, Y_l, X_l)$,
-   which describes the number of timesteps, rows, and columns it
-   contains.
-
-3. Each input dataset is assigned a *chunk shape* $(T_c, Y_c,
-   X_c)$, which describes the number of timesteps, rows, and columns
-   to be loaded from the corresponding layer when requesting a new
-   chunk of data within its spatio-temporal extent. All chunk
-   dimensions must exactly divide their corresponding layer
-   dimensions.
-
-4. Each input dataset is assigned a *chunk cache* with shape
-   $(T_l/T_c, Y_l/Y_c, X_l/X_c)$. This is represented in memory as a
-   3D array of pointers, initialized to nulls.
-
-5. Each input dataset is assigned a 3D look-up function to be used in
-   fire behavior calculations.
-
-   1. Whenever this function is called on a space-time coordinate
-      which has no value in the *chunk cache*, a call is first made
-      automatically to load the array chunk containing this coordinate
-      from the underlying input dataset into the *chunk cache*, and
-      then the coordinate value is looked up and returned.
-
-   2. Whenever this function is called on a space-time coordinate
-      which has a value in the *chunk cache*, it is looked up and
-      returned.
-
-The net effect of this chunked data model approach is that
-Pyretechnics only needs to load into memory those space-time chunks
-which are intersected by the expanding conical burn scar. In
-simulations of fires that are small relative to the extent of the full
-3D space-time environment, these memory savings may be substantial and
-may make it possible to run simulations over larger extents and/or
-finer resolutions than have been used previously.
+Fire spread simulations that use the =LazySpaceTimeCube= class will
+only need to load into memory those subcubes which are intersected by
+the expanding conical burn scar (see section [[Fires as Conical Shapes
+in Space-Time]]). In simulations of fires that are small relative to the
+extent of the full 3D space-time environment, these memory savings may
+be substantial and may make it possible to run simulations over larger
+extents and/or finer resolutions than have been used previously.
 
 #+name: lazy-space-time-cube-class
 #+begin_src python
@@ -594,7 +608,12 @@ class LazySpaceTimeCube:
     # NOTE: None and -1 cannot be passed in
     def getTimeSeries(self, t_range, y, x):
         """
-        Returns a 1D array.
+        Return the 1D array given by the slice (t_range,y,x) by translating these cube
+        coordinates to cache and subcube coordinates, loading the matching subcubes into
+        the cache grid if not already present, looking up the array slices within each
+        subcube, and merging them together into a single 1D array.
+
+        NOTE: (t,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
         """
         # Destructure the argument range
         (t_start, t_stop) = t_range
@@ -623,7 +642,12 @@ class LazySpaceTimeCube:
     # NOTE: None and -1 cannot be passed in
     def getSpatialPlane(self, t, y_range, x_range):
         """
-        Returns a 2D array.
+        Return the 2D array given by the slice (t,y_range,x_range) by translating these
+        cube coordinates to cache and subcube coordinates, loading the matching subcubes
+        into the cache grid if not already present, looking up the array slices within each
+        subcube, and merging them together into a single 2D array.
+
+        NOTE: (t,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
         """
         # Destructure the argument ranges
         (y_start, y_stop) = y_range
@@ -656,7 +680,12 @@ class LazySpaceTimeCube:
     # NOTE: None and -1 cannot be passed in
     def getSubcube(self, t_range, y_range, x_range):
         """
-        Returns a 3D array.
+        Return the 3D array given by the slice (t_range,y_range,x_range) by translating
+        these cube coordinates to cache and subcube coordinates, loading the matching
+        subcubes into the cache grid if not already present, looking up the array slices
+        within each subcube, and merging them together into a single 3D array.
+
+        NOTE: (t,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
         """
         # Destructure the argument ranges
         (t_start, t_stop) = t_range
@@ -691,6 +720,11 @@ class LazySpaceTimeCube:
 
     def getFullyRealizedCube(self, cache=False):
         raise ValueError("getFullyRealizedCube is not implemented for LazySpaceTimeCube.\n"
+                         + "You probably don't want to do this anyway.")
+
+
+    def releaseFullyRealizedCube(self):
+        raise ValueError("releaseFullyRealizedCube is not implemented for LazySpaceTimeCube.\n"
                          + "You probably don't want to do this anyway.")
 #+end_src
 
