--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -753,23 +753,35 @@ from pyretechnics.space_time_cube import SpaceTimeCube
 
 cube_shape = (
     240,  # bands: 10 days @ 1 hour/band
-    1000, # rows: 30 km @ 30 meters/row
-    1000, # cols: 30 km @ 30 meters/col
+    1000, # rows:  30 km @ 30 meters/row
+    1000, # cols:  30 km @ 30 meters/col
 )
 
+#=====================================================================================================
 # Constant Data: foliar moisture = 70% everywhere
+#=====================================================================================================
+
 foliar_moisture = 0.7
 constant_cube = SpaceTimeCube(cube_shape, foliar_moisture)
 
+#=====================================================================================================
 # Temporal Data: 24-hour burn period with ramp up and ramp down for 10 days
+#=====================================================================================================
+
 spread_rate_adjustments = ([0] * 6 + [0.33, 0.66] + [1] * 12 + [0.66, 0.33] + [0] * 2) * 10
 time_series_cube = SpaceTimeCube(cube_shape, spread_rate_adjustments)
 
+#=====================================================================================================
 # Spatial Data: 2D elevation raster with 1000 (30m) x 1000 (30m) cells
+#=====================================================================================================
+
 elevation_raster = np.random.normal(500, 100, 1000000).astype("int").reshape(1000,1000)
 spatial_cube = SpaceTimeCube(cube_shape, elevation_raster)
 
+#=====================================================================================================
 # Spatio-Temporal Data: 3D daily max wind speed raster with 10 (days) x 100 (300m) x 100 (300m) cells
+#=====================================================================================================
+
 wind_speed_raster = np.random.normal(30, 5, 100000).astype("int").reshape(10,100,100)
 spatiotemporal_cube = SpaceTimeCube(cube_shape, wind_speed_raster)
 #+end_src
@@ -805,10 +817,10 @@ Value from Time Series Data: Spread Rate Adjustment
 1.0 
 
 Value from Spatial Data: Elevation
-808 
+694 
 
 Value from Spatio-Temporal Data: Wind Speed
-31
+34
 #+end_example
 
 **** Retrieve a Time Series at a Spatial Coordinate
@@ -842,10 +854,10 @@ Time Series from Time Series Data: Spread Rate Adjustment
 [1.   1.   0.66 0.33 0.   0.   0.   0.   0.   0.   0.   0.  ] 
 
 Time Series from Spatial Data: Elevation
-[808 808 808 808 808 808 808 808 808 808 808 808] 
+[694 694 694 694 694 694 694 694 694 694 694 694] 
 
 Time Series from Spatio-Temporal Data: Wind Speed
-[31 31 31 31 31 31 32 32 32 32 32 32]
+[34 34 34 34 34 34 28 28 28 28 28 28]
 #+end_example
 
 **** Retrieve a Spatial Plane at a Temporal Coordinate
@@ -897,28 +909,28 @@ Spatial Plane from Time Series Data: Spread Rate Adjustment
  [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]] 
 
 Spatial Plane from Spatial Data: Elevation
-[[644 562 375 592 507 577 410 527 566 627]
- [535 749 522 401 462 410 504 449 573 547]
- [584 412 605 427 631 570 624 545 394 631]
- [395 625 665 383 518 497 544 185 539 355]
- [488 483 280 506 504 495 575 496 668 496]
- [532 512 536 532 519 808 530 366 384 566]
- [528 520 624 400 350 640 476 518 416 457]
- [169 612 671 592 295 531 249 428 425 543]
- [522 469 680 481 425 485 629 469 440 619]
- [408 518 407 554 455 656 411 566 454 433]] 
+[[479 613 584 629 342 708 162 687 500 316]
+ [449 728 521 508 339 452 343 664 578 487]
+ [424 399 413 578 301 392 539 539 233 644]
+ [458 587 526 608 461 503 464 651 550 488]
+ [313 544 514 535 610 501 684 338 508 469]
+ [395 497 471 262 492 694 571 464 514 394]
+ [387 618 458 551 701 392 631 558 565 617]
+ [811 522 560 528 520 395 520 599 491 510]
+ [515 516 426 524 673 661 561 428 768 633]
+ [703 460 469 510 513 483 392 551 477 437]] 
 
 Spatial Plane from Spatio-Temporal Data: Wind Speed
-[[33 33 33 33 33 28 28 28 28 28]
- [33 33 33 33 33 28 28 28 28 28]
- [33 33 33 33 33 28 28 28 28 28]
- [33 33 33 33 33 28 28 28 28 28]
- [33 33 33 33 33 28 28 28 28 28]
- [28 28 28 28 28 31 31 31 31 31]
- [28 28 28 28 28 31 31 31 31 31]
- [28 28 28 28 28 31 31 31 31 31]
- [28 28 28 28 28 31 31 31 31 31]
- [28 28 28 28 28 31 31 31 31 31]]
+[[25 25 25 25 25 22 22 22 22 22]
+ [25 25 25 25 25 22 22 22 22 22]
+ [25 25 25 25 25 22 22 22 22 22]
+ [25 25 25 25 25 22 22 22 22 22]
+ [25 25 25 25 25 22 22 22 22 22]
+ [18 18 18 18 18 34 34 34 34 34]
+ [18 18 18 18 18 34 34 34 34 34]
+ [18 18 18 18 18 34 34 34 34 34]
+ [18 18 18 18 18 34 34 34 34 34]
+ [18 18 18 18 18 34 34 34 34 34]]
 #+end_example
 
 **** Retrieve a Subcube within a Space-Time Region
@@ -992,242 +1004,407 @@ Subcube from Time Series Data: Spread Rate Adjustment
   [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]] 
 
 Subcube from Spatial Data: Elevation
-[[[644 562 375 592 507 577 410 527 566 627]
-  [535 749 522 401 462 410 504 449 573 547]
-  [584 412 605 427 631 570 624 545 394 631]
-  [395 625 665 383 518 497 544 185 539 355]
-  [488 483 280 506 504 495 575 496 668 496]
-  [532 512 536 532 519 808 530 366 384 566]
-  [528 520 624 400 350 640 476 518 416 457]
-  [169 612 671 592 295 531 249 428 425 543]
-  [522 469 680 481 425 485 629 469 440 619]
-  [408 518 407 554 455 656 411 566 454 433]]
+[[[479 613 584 629 342 708 162 687 500 316]
+  [449 728 521 508 339 452 343 664 578 487]
+  [424 399 413 578 301 392 539 539 233 644]
+  [458 587 526 608 461 503 464 651 550 488]
+  [313 544 514 535 610 501 684 338 508 469]
+  [395 497 471 262 492 694 571 464 514 394]
+  [387 618 458 551 701 392 631 558 565 617]
+  [811 522 560 528 520 395 520 599 491 510]
+  [515 516 426 524 673 661 561 428 768 633]
+  [703 460 469 510 513 483 392 551 477 437]]
 
- [[644 562 375 592 507 577 410 527 566 627]
-  [535 749 522 401 462 410 504 449 573 547]
-  [584 412 605 427 631 570 624 545 394 631]
-  [395 625 665 383 518 497 544 185 539 355]
-  [488 483 280 506 504 495 575 496 668 496]
-  [532 512 536 532 519 808 530 366 384 566]
-  [528 520 624 400 350 640 476 518 416 457]
-  [169 612 671 592 295 531 249 428 425 543]
-  [522 469 680 481 425 485 629 469 440 619]
-  [408 518 407 554 455 656 411 566 454 433]]] 
+ [[479 613 584 629 342 708 162 687 500 316]
+  [449 728 521 508 339 452 343 664 578 487]
+  [424 399 413 578 301 392 539 539 233 644]
+  [458 587 526 608 461 503 464 651 550 488]
+  [313 544 514 535 610 501 684 338 508 469]
+  [395 497 471 262 492 694 571 464 514 394]
+  [387 618 458 551 701 392 631 558 565 617]
+  [811 522 560 528 520 395 520 599 491 510]
+  [515 516 426 524 673 661 561 428 768 633]
+  [703 460 469 510 513 483 392 551 477 437]]] 
 
 Subcube from Spatio-Temporal Data: Wind Speed
-[[[33 33 33 33 33 28 28 28 28 28]
-  [33 33 33 33 33 28 28 28 28 28]
-  [33 33 33 33 33 28 28 28 28 28]
-  [33 33 33 33 33 28 28 28 28 28]
-  [33 33 33 33 33 28 28 28 28 28]
-  [28 28 28 28 28 31 31 31 31 31]
-  [28 28 28 28 28 31 31 31 31 31]
-  [28 28 28 28 28 31 31 31 31 31]
-  [28 28 28 28 28 31 31 31 31 31]
-  [28 28 28 28 28 31 31 31 31 31]]
+[[[25 25 25 25 25 22 22 22 22 22]
+  [25 25 25 25 25 22 22 22 22 22]
+  [25 25 25 25 25 22 22 22 22 22]
+  [25 25 25 25 25 22 22 22 22 22]
+  [25 25 25 25 25 22 22 22 22 22]
+  [18 18 18 18 18 34 34 34 34 34]
+  [18 18 18 18 18 34 34 34 34 34]
+  [18 18 18 18 18 34 34 34 34 34]
+  [18 18 18 18 18 34 34 34 34 34]
+  [18 18 18 18 18 34 34 34 34 34]]
 
- [[20 20 20 20 20 23 23 23 23 23]
-  [20 20 20 20 20 23 23 23 23 23]
-  [20 20 20 20 20 23 23 23 23 23]
-  [20 20 20 20 20 23 23 23 23 23]
-  [20 20 20 20 20 23 23 23 23 23]
-  [34 34 34 34 34 32 32 32 32 32]
-  [34 34 34 34 34 32 32 32 32 32]
-  [34 34 34 34 34 32 32 32 32 32]
-  [34 34 34 34 34 32 32 32 32 32]
-  [34 34 34 34 34 32 32 32 32 32]]]
+ [[30 30 30 30 30 32 32 32 32 32]
+  [30 30 30 30 30 32 32 32 32 32]
+  [30 30 30 30 30 32 32 32 32 32]
+  [30 30 30 30 30 32 32 32 32 32]
+  [30 30 30 30 30 32 32 32 32 32]
+  [31 31 31 31 31 28 28 28 28 28]
+  [31 31 31 31 31 28 28 28 28 28]
+  [31 31 31 31 31 28 28 28 28 28]
+  [31 31 31 31 31 28 28 28 28 28]
+  [31 31 31 31 31 28 28 28 28 28]]]
 #+end_example
 
 *** How to Use LazySpaceTimeCube
+**** Create a LazySpaceTimeCube from 0D, 1D, 2D, or 3D Input Data
 
-#+name: lazy-space-time-cube-examples
+#+name: lazy-space-time-cube-create
+#+begin_src python :results silent
+import numpy as np
+from pyretechnics.space_time_cube import SpaceTimeCube, LazySpaceTimeCube
+
+cube_shape = (
+    240,  # bands: 10 days @ 1 hour/band
+    1000, # rows:  30 km @ 30 meters/row
+    1000, # cols:  30 km @ 30 meters/col
+)
+
+#=====================================================================================================
+# Constant Data: foliar moisture = 70% everywhere
+#=====================================================================================================
+
+foliar_moisture = 0.7
+foliar_moisture_subcube_shape = cube_shape # Only 1 subcube necessary
+
+def foliar_moisture_load_subcube(_, subcube_shape):
+    return SpaceTimeCube(subcube_shape, foliar_moisture)
+
+constant_cube = LazySpaceTimeCube(cube_shape,
+                                  foliar_moisture_subcube_shape,
+                                  foliar_moisture_load_subcube)
+
+#=====================================================================================================
+# Temporal Data: 24-hour burn period with ramp up and ramp down for 10 days
+#=====================================================================================================
+
+spread_rate_adjustments = ([0] * 6 + [0.33, 0.66] + [1] * 12 + [0.66, 0.33] + [0] * 2) * 10
+spread_rate_adjustments_subcube_shape = (24, 1000, 1000) # 1 subcube per day (10 total)
+
+def spread_rate_adjustments_load_subcube(cache_index, subcube_shape):
+    (cache_t, _, _) = cache_index
+    t_start = 24 * cache_t
+    t_stop  = 24 * (cache_t + 1)
+    return SpaceTimeCube(subcube_shape,
+                         spread_rate_adjustments[t_start:t_stop])
+
+time_series_cube = LazySpaceTimeCube(cube_shape,
+                                     spread_rate_adjustments_subcube_shape,
+                                     spread_rate_adjustments_load_subcube)
+
+#=====================================================================================================
+# Spatial Data: 2D elevation raster with 1000 (30m) x 1000 (30m) cells
+#=====================================================================================================
+
+elevation_raster = np.random.normal(500, 100, 1000000).astype("int").reshape(1000,1000)
+elevation_raster_subcube_shape = (240, 100, 100) # 1 subcube per 100x100 cell region (10x10 = 100 total)
+
+def elevation_raster_load_subcube(cache_index, subcube_shape):
+    (_, cache_y, cache_x) = cache_index
+    y_start = 100 * cache_y
+    y_stop  = 100 * (cache_y + 1)
+    x_start = 100 * cache_x
+    x_stop  = 100 * (cache_x + 1)
+    return SpaceTimeCube(subcube_shape,
+                         elevation_raster[y_start:y_stop,
+                                          x_start:x_stop])
+
+spatial_cube = LazySpaceTimeCube(cube_shape,
+                                 elevation_raster_subcube_shape,
+                                 elevation_raster_load_subcube)
+
+#=====================================================================================================
+# Spatio-Temporal Data: 3D daily max wind speed raster with 10 (days) x 100 (300m) x 100 (300m) cells
+#=====================================================================================================
+
+wind_speed_raster = np.random.normal(30, 5, 100000).astype("int").reshape(10,100,100)
+wind_speed_raster_subcube_shape = (24, 100, 100) # 1 subcube per day per 100x100 cell region (10x10x10 = 1000 total)
+
+def wind_speed_raster_load_subcube(cache_index, subcube_shape):
+    (cache_t, cache_y, cache_x) = cache_index
+    t_start = cache_t
+    t_stop  = cache_t + 1
+    y_start = 10 * cache_y
+    y_stop  = 10 * (cache_y + 1)
+    x_start = 10 * cache_x
+    x_stop  = 10 * (cache_x + 1)
+    return SpaceTimeCube(subcube_shape,
+                         wind_speed_raster[t_start:t_stop,
+                                           y_start:y_stop,
+                                           x_start:x_stop])
+
+spatiotemporal_cube = LazySpaceTimeCube(cube_shape,
+                                        wind_speed_raster_subcube_shape,
+                                        wind_speed_raster_load_subcube)
+#+end_src
+
+**** Retrieve a Scalar Value at a Space-Time Coordinate
+
+#+name: lazy-space-time-cube-get-point
 #+begin_src python
-import numpy as np
-from pyretechnics.space_time_cube import LazySpaceTimeCube
+# Space-Time Coordinate
+band = 12
+row  = 100
+col  = 100
 
+print("Value from Constant Data: Foliar Moisture")
+print(constant_cube.get(band, row, col), "\n")
+
+print("Value from Time Series Data: Spread Rate Adjustment")
+print(time_series_cube.get(band, row, col), "\n")
+
+print("Value from Spatial Data: Elevation")
+print(spatial_cube.get(band, row, col), "\n")
+
+print("Value from Spatio-Temporal Data: Wind Speed")
+print(spatiotemporal_cube.get(band, row, col))
 #+end_src
 
+#+RESULTS: lazy-space-time-cube-get-point
+#+begin_example
+Value from Constant Data: Foliar Moisture
+0.7 
 
+Value from Time Series Data: Spread Rate Adjustment
+1.0 
 
+Value from Spatial Data: Elevation
+519 
 
-#+name: lazy-array-examples
-#+begin_src python :tangle ../test/pyretechnics_test/test_lazy_array.py
-import numpy as np
-from pyretechnics.lazy_array import make_lookup_fn_2d, make_lookup_fn_3d
+Value from Spatio-Temporal Data: Wind Speed
+36
+#+end_example
 
-#==============================================================
-# Example Chunk Loading Functions
-#==============================================================
+**** Retrieve a Time Series at a Spatial Coordinate
 
-def make_load_chunk_2d(layer_2d, chunk_shape_2d):
-    """
-    Example 2D chunk loading function. Since we are calling the
-    lazy array functions from Python and they will be used as
-    read-only data by the caller, we can just provide a sliced view of
-    the underlying array rather than generating a copy.
-    """
-    (chunk_rows, chunk_cols) = chunk_shape_2d
-    return lambda cy, cx: layer_2d[cy * chunk_rows : (cy + 1) * chunk_rows,
-                                   cx * chunk_cols : (cx + 1) * chunk_cols]
+#+name: lazy-space-time-cube-get-time-series
+#+begin_src python
+# Space-Time Coordinates
+band_range = (18,29)
+row        = 100
+col        = 100
 
+print("Time Series from Constant Data: Foliar Moisture")
+print(constant_cube.getTimeSeries(band_range, row, col), "\n")
 
-def make_load_chunk_3d(layer_3d, chunk_shape_3d):
-    """
-    Example 3D chunk loading function. Since we are calling the
-    lazy array functions from Python and they will be used as
-    read-only data by the caller, we can just provide a sliced view of
-    the underlying array rather than generating a copy.
-    """
-    (chunk_bands, chunk_rows, chunk_cols) = chunk_shape_3d
-    return lambda cz, cy, cx: layer_3d[cz * chunk_bands : (cz + 1) * chunk_bands,
-                                       cy * chunk_rows  : (cy + 1) * chunk_rows,
-                                       cx * chunk_cols  : (cx + 1) * chunk_cols]
+print("Time Series from Time Series Data: Spread Rate Adjustment")
+print(time_series_cube.getTimeSeries(band_range, row, col), "\n")
 
-#==============================================================
-# Example Lookup Functions for 1000x1000 and 24x100x100 Layers
-#==============================================================
+print("Time Series from Spatial Data: Elevation")
+print(spatial_cube.getTimeSeries(band_range, row, col), "\n")
 
-#--------------------  bands, rows, cols
-simulation_shape_2d = (       1000, 1000)
-layer_shape_2d      = (       1000, 1000)
-chunk_shape_2d      = (        100,  100)
-
-simulation_shape_3d = (   24, 1000, 1000)
-layer_shape_3d      = (   24,  100,  100)
-chunk_shape_3d      = (    1,   10,   10)
-
-# Partial Application Functions
-def make_lookup_fn_2d_for_layer(layer_2d):
-    return make_lookup_fn_2d(simulation_shape_2d,
-                             layer_shape_2d,
-                             chunk_shape_2d,
-                             make_load_chunk_2d(layer_2d, chunk_shape_2d))
-
-
-def make_lookup_fn_3d_for_layer(layer_3d):
-    return make_lookup_fn_3d(simulation_shape_3d,
-                             layer_shape_3d,
-                             chunk_shape_3d,
-                             make_load_chunk_3d(layer_3d, chunk_shape_3d))
-
-#==============================================================
-# Raw Data - Managed by the Caller
-#==============================================================
-
-# 2D Arrays (e.g. 30m x 30m resolution, 30km x 30km extent)
-elevation_layer                    = np.arange(0,1000000).reshape(1000,1000)
-slope_layer                        = np.arange(0,1000000).reshape(1000,1000)
-aspect_layer                       = np.arange(0,1000000).reshape(1000,1000)
-fuel_model_layer                   = np.arange(0,1000000).reshape(1000,1000)
-canopy_cover_layer                 = np.arange(0,1000000).reshape(1000,1000)
-canopy_height_layer                = np.arange(0,1000000).reshape(1000,1000)
-canopy_base_height_layer           = np.arange(0,1000000).reshape(1000,1000)
-canopy_bulk_density_layer          = np.arange(0,1000000).reshape(1000,1000)
-fuel_spread_adjustment_layer       = np.arange(0,1000000).reshape(1000,1000) # Optional
-suppression_difficulty_index_layer = np.arange(0,1000000).reshape(1000,1000) # Optional
-
-# 3D Arrays (e.g. 1hr x 300m x 300m resolution, 1day x 30km x 30km extent)
-temperature_layer                   = np.arange(240000).reshape(24,100,100)
-relative_humidity_layer             = np.arange(240000).reshape(24,100,100)
-wind_speed_10m_x_layer              = np.arange(240000).reshape(24,100,100)
-wind_speed_10m_y_layer              = np.arange(240000).reshape(24,100,100)
-fuel_moisture_dead_1hr_layer        = np.arange(240000).reshape(24,100,100)
-fuel_moisture_dead_10hr_layer       = np.arange(240000).reshape(24,100,100)
-fuel_moisture_dead_100hr_layer      = np.arange(240000).reshape(24,100,100)
-fuel_moisture_live_herbaceous_layer = np.arange(240000).reshape(24,100,100)
-fuel_moisture_live_woody_layer      = np.arange(240000).reshape(24,100,100)
-foliar_moisture_layer               = np.arange(240000).reshape(24,100,100)
-weather_spread_adjustment_layer     = np.arange(240000).reshape(24,100,100) # Optional
-
-#==============================================================
-# Creating the Dictionary of Layer Names to Lookup Functions
-#==============================================================
-
-def test_make_layer_lookup():
-    layer_lookup = {
-        # 2D Arrays (e.g. 30m x 30m resolution, 30km x 30km extent)
-        "elevation"                    : make_lookup_fn_2d_for_layer(elevation_layer),
-        "slope"                        : make_lookup_fn_2d_for_layer(slope_layer),
-        "aspect"                       : make_lookup_fn_2d_for_layer(aspect_layer),
-        "fuel_model"                   : make_lookup_fn_2d_for_layer(fuel_model_layer),
-        "canopy_cover"                 : make_lookup_fn_2d_for_layer(canopy_cover_layer),
-        "canopy_height"                : make_lookup_fn_2d_for_layer(canopy_height_layer),
-        "canopy_base_height"           : make_lookup_fn_2d_for_layer(canopy_base_height_layer),
-        "canopy_bulk_density"          : make_lookup_fn_2d_for_layer(canopy_bulk_density_layer),
-        "fuel_spread_adjustment"       : make_lookup_fn_2d_for_layer(fuel_spread_adjustment_layer),       # Optional
-        "suppression_difficulty_index" : make_lookup_fn_2d_for_layer(suppression_difficulty_index_layer), # Optional
-
-        # 3D Arrays (e.g. 1hr x 300m x 300m resolution, 1day x 30km x 30km extent)
-        "temperature"                  : make_lookup_fn_3d_for_layer(temperature_layer),
-        "relative_humidity"            : make_lookup_fn_3d_for_layer(relative_humidity_layer),
-        "wind_speed_10m_x"             : make_lookup_fn_3d_for_layer(wind_speed_10m_x_layer),
-        "wind_speed_10m_y"             : make_lookup_fn_3d_for_layer(wind_speed_10m_y_layer),
-        "fuel_moisture_dead_1hr"       : make_lookup_fn_3d_for_layer(fuel_moisture_dead_1hr_layer),
-        "fuel_moisture_dead_10hr"      : make_lookup_fn_3d_for_layer(fuel_moisture_dead_10hr_layer),
-        "fuel_moisture_dead_100hr"     : make_lookup_fn_3d_for_layer(fuel_moisture_dead_100hr_layer),
-        "fuel_moisture_live_herbaceous": make_lookup_fn_3d_for_layer(fuel_moisture_live_herbaceous_layer),
-        "fuel_moisture_live_woody"     : make_lookup_fn_3d_for_layer(fuel_moisture_live_woody_layer),
-        "foliar_moisture"              : make_lookup_fn_3d_for_layer(foliar_moisture_layer),
-        "weather_spread_adjustment"    : make_lookup_fn_3d_for_layer(weather_spread_adjustment_layer),    # Optional
-    }
-    assert all(map(lambda v: callable(v), layer_lookup.values()))
-    return layer_lookup
-
-#==============================================================
-# Looking Up Values in the Layers
-#==============================================================
-
-# NOTE: 2D coords should be provided as (y,x) in simulation space.
-def test_use_layer_lookup_2d():
-    layer_lookup = test_make_layer_lookup()
-    dem_100_100  = layer_lookup["elevation"](100,100)
-    slp_100_100  = layer_lookup["slope"](100,100)
-    asp_100_100  = layer_lookup["aspect"](100,100)
-    fbfm_100_100 = layer_lookup["fuel_model"](100,100)
-    cc_100_100   = layer_lookup["canopy_cover"](100,100)
-    ch_100_100   = layer_lookup["canopy_height"](100,100)
-    cbh_100_100  = layer_lookup["canopy_base_height"](100,100)
-    cbd_100_100  = layer_lookup["canopy_bulk_density"](100,100)
-    fsa_100_100  = layer_lookup["fuel_spread_adjustment"](100,100)           # Optional
-    sdi_100_100  = layer_lookup["suppression_difficulty_index"](100,100)     # Optional
-    assert dem_100_100  == 100100
-    assert slp_100_100  == 100100
-    assert asp_100_100  == 100100
-    assert fbfm_100_100 == 100100
-    assert cc_100_100   == 100100
-    assert ch_100_100   == 100100
-    assert cbh_100_100  == 100100
-    assert cbd_100_100  == 100100
-    assert fsa_100_100  == 100100
-    assert sdi_100_100  == 100100
-
-
-# NOTE: 3D coords should be provided as (t,y,x) in simulation space.
-def test_use_layer_lookup_3d():
-    layer_lookup = test_make_layer_lookup()
-    temp_12_100_100  = layer_lookup["temperature"](12,100,100)
-    rh_12_100_100    = layer_lookup["relative_humidity"](12,100,100)
-    wspx_12_100_100  = layer_lookup["wind_speed_10m_x"](12,100,100)
-    wspy_12_100_100  = layer_lookup["wind_speed_10m_y"](12,100,100)
-    md1_12_100_100   = layer_lookup["fuel_moisture_dead_1hr"](12,100,100)
-    md10_12_100_100  = layer_lookup["fuel_moisture_dead_10hr"](12,100,100)
-    md100_12_100_100 = layer_lookup["fuel_moisture_dead_100hr"](12,100,100)
-    mlh_12_100_100   = layer_lookup["fuel_moisture_live_herbaceous"](12,100,100)
-    mlw_12_100_100   = layer_lookup["fuel_moisture_live_woody"](12,100,100)
-    fm_12_100_100    = layer_lookup["foliar_moisture"](12,100,100)
-    wsa_12_100_100   = layer_lookup["weather_spread_adjustment"](12,100,100) # Optional
-    assert temp_12_100_100  == 121010
-    assert rh_12_100_100    == 121010
-    assert wspx_12_100_100  == 121010
-    assert wspy_12_100_100  == 121010
-    assert md1_12_100_100   == 121010
-    assert md10_12_100_100  == 121010
-    assert md100_12_100_100 == 121010
-    assert mlh_12_100_100   == 121010
-    assert mlw_12_100_100   == 121010
-    assert fm_12_100_100    == 121010
-    assert wsa_12_100_100   == 121010
+print("Time Series from Spatio-Temporal Data: Wind Speed")
+print(spatiotemporal_cube.getTimeSeries(band_range, row, col))
 #+end_src
+
+#+RESULTS: lazy-space-time-cube-get-time-series
+#+begin_example
+Time Series from Constant Data: Foliar Moisture
+[0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7] 
+
+Time Series from Time Series Data: Spread Rate Adjustment
+[1.   1.   0.66 0.33 0.   0.   0.   0.   0.   0.   0.   0.  ] 
+
+Time Series from Spatial Data: Elevation
+[519 519 519 519 519 519 519 519 519 519 519 519] 
+
+Time Series from Spatio-Temporal Data: Wind Speed
+[36 36 36 36 36 36 37 37 37 37 37 37]
+#+end_example
+
+**** Retrieve a Spatial Plane at a Temporal Coordinate
+
+#+name: lazy-space-time-cube-get-spatial-plane
+#+begin_src python
+# Space-Time Coordinates
+band      = 12
+row_range = (95,104)
+col_range = (95,104)
+
+print("Spatial Plane from Constant Data: Foliar Moisture")
+print(constant_cube.getSpatialPlane(band, row_range, col_range), "\n")
+
+print("Spatial Plane from Time Series Data: Spread Rate Adjustment")
+print(time_series_cube.getSpatialPlane(band, row_range, col_range), "\n")
+
+print("Spatial Plane from Spatial Data: Elevation")
+print(spatial_cube.getSpatialPlane(band, row_range, col_range), "\n")
+
+print("Spatial Plane from Spatio-Temporal Data: Wind Speed")
+print(spatiotemporal_cube.getSpatialPlane(band, row_range, col_range))
+#+end_src
+
+#+RESULTS: lazy-space-time-cube-get-spatial-plane
+#+begin_example
+Spatial Plane from Constant Data: Foliar Moisture
+[[0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+ [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+ [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+ [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+ [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+ [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+ [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+ [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+ [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+ [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]] 
+
+Spatial Plane from Time Series Data: Spread Rate Adjustment
+[[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
+ [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
+ [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
+ [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
+ [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
+ [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
+ [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
+ [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
+ [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
+ [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]] 
+
+Spatial Plane from Spatial Data: Elevation
+[[535 236 472 634 519 637 533 573 439 472]
+ [641 391 747 414 632 474 607 570 442 576]
+ [566 558 853 320 608 342 571 540 537 513]
+ [428 422 411 626 515 452 493 408 555 519]
+ [395 453 480 308 727 392 543 559 534 502]
+ [444 509 517 566 286 519 432 525 543 531]
+ [252 626 587 508 689 622 298 571 700 487]
+ [500 468 552 625 373 461 365 558 678 534]
+ [420 462 493 453 638 521 467 450 573 386]
+ [425 412 491 487 368 467 374 655 481 578]] 
+
+Spatial Plane from Spatio-Temporal Data: Wind Speed
+[[24 24 24 24 24 31 31 31 31 31]
+ [24 24 24 24 24 31 31 31 31 31]
+ [24 24 24 24 24 31 31 31 31 31]
+ [24 24 24 24 24 31 31 31 31 31]
+ [24 24 24 24 24 31 31 31 31 31]
+ [33 33 33 33 33 36 36 36 36 36]
+ [33 33 33 33 33 36 36 36 36 36]
+ [33 33 33 33 33 36 36 36 36 36]
+ [33 33 33 33 33 36 36 36 36 36]
+ [33 33 33 33 33 36 36 36 36 36]]
+#+end_example
+
+**** Retrieve a Subcube within a Space-Time Region
+
+#+name: lazy-space-time-cube-get-subcube
+#+begin_src python
+# Space-Time Coordinates
+band_range = (23,24)
+row_range  = (95,104)
+col_range  = (95,104)
+
+print("Subcube from Constant Data: Foliar Moisture")
+print(constant_cube.getSubcube(band_range, row_range, col_range), "\n")
+
+print("Subcube from Time Series Data: Spread Rate Adjustment")
+print(time_series_cube.getSubcube(band_range, row_range, col_range), "\n")
+
+print("Subcube from Spatial Data: Elevation")
+print(spatial_cube.getSubcube(band_range, row_range, col_range), "\n")
+
+print("Subcube from Spatio-Temporal Data: Wind Speed")
+print(spatiotemporal_cube.getSubcube(band_range, row_range, col_range))
+#+end_src
+
+#+RESULTS: lazy-space-time-cube-get-subcube
+#+begin_example
+Subcube from Constant Data: Foliar Moisture
+[[[0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]]
+
+ [[0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]]] 
+
+Subcube from Time Series Data: Spread Rate Adjustment
+[[[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]
+
+ [[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]] 
+
+Subcube from Spatial Data: Elevation
+[[[535 236 472 634 519 637 533 573 439 472]
+  [641 391 747 414 632 474 607 570 442 576]
+  [566 558 853 320 608 342 571 540 537 513]
+  [428 422 411 626 515 452 493 408 555 519]
+  [395 453 480 308 727 392 543 559 534 502]
+  [444 509 517 566 286 519 432 525 543 531]
+  [252 626 587 508 689 622 298 571 700 487]
+  [500 468 552 625 373 461 365 558 678 534]
+  [420 462 493 453 638 521 467 450 573 386]
+  [425 412 491 487 368 467 374 655 481 578]]
+
+ [[535 236 472 634 519 637 533 573 439 472]
+  [641 391 747 414 632 474 607 570 442 576]
+  [566 558 853 320 608 342 571 540 537 513]
+  [428 422 411 626 515 452 493 408 555 519]
+  [395 453 480 308 727 392 543 559 534 502]
+  [444 509 517 566 286 519 432 525 543 531]
+  [252 626 587 508 689 622 298 571 700 487]
+  [500 468 552 625 373 461 365 558 678 534]
+  [420 462 493 453 638 521 467 450 573 386]
+  [425 412 491 487 368 467 374 655 481 578]]] 
+
+Subcube from Spatio-Temporal Data: Wind Speed
+[[[24 24 24 24 24 31 31 31 31 31]
+  [24 24 24 24 24 31 31 31 31 31]
+  [24 24 24 24 24 31 31 31 31 31]
+  [24 24 24 24 24 31 31 31 31 31]
+  [24 24 24 24 24 31 31 31 31 31]
+  [33 33 33 33 33 36 36 36 36 36]
+  [33 33 33 33 33 36 36 36 36 36]
+  [33 33 33 33 33 36 36 36 36 36]
+  [33 33 33 33 33 36 36 36 36 36]
+  [33 33 33 33 33 36 36 36 36 36]]
+
+ [[31 31 31 31 31 25 25 25 25 25]
+  [31 31 31 31 31 25 25 25 25 25]
+  [31 31 31 31 31 25 25 25 25 25]
+  [31 31 31 31 31 25 25 25 25 25]
+  [31 31 31 31 31 25 25 25 25 25]
+  [30 30 30 30 30 37 37 37 37 37]
+  [30 30 30 30 30 37 37 37 37 37]
+  [30 30 30 30 30 37 37 37 37 37]
+  [30 30 30 30 30 37 37 37 37 37]
+  [30 30 30 30 30 37 37 37 37 37]]]
+#+end_example
 
 * Fire Spread API
 
